# five-camera-controller

./: Cargo.toml  build.rs  link-extra.x  memory.x
.cargo/: config.toml
src/: bsp.rs  camera.rs  config.rs  error.rs  exif.rs  image_processor.rs  lib.rs  main.rs  storage.rs
src/bsp/: mod.rs
src/error/: mod.rs
src/exif/: mod.rs
src/fcu/: mod.rs
src/image/: mod.rs
src/storage/: mod.rs  sd_fat_wrapper.rs
tests/: integration.rs
